<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginLeft="24dp"
  android:layout_marginStart="24dp"
  android:layout_marginEnd="24dp"
  android:gravity="center_vertical"
  >

  <TextView
    android:id="@+id/tv_dialog_margins_cold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dialog_margins_cold"
    android:textColor="@color/color_text_main"
    android:drawableLeft="@drawable/station_underpopulated"
    android:drawableStart="@drawable/station_underpopulated"
    android:gravity="center_vertical|start"
    />

  <com.edmodo.rangebar.RangeBar
    android:id="@+id/rangebar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />

  <TextView
    android:id="@+id/tv_dialog_margins_hot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:text="@string/dialog_margins_hot"
    android:textColor="@color/color_text_main"
    android:drawableRight="@drawable/station_overpopulated"
    android:drawableEnd="@drawable/station_overpopulated"
    android:gravity="center_vertical|end"
    />

  <Button
    android:id="@+id/btn_set"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginTop="16dp"
    android:textColor="@color/color_text_main"
    android:text="@string/hot_cold_margins_label_btn_set"
    />

</LinearLayout>