<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.MapsActivity">

  <fragment
    android:id="@+id/map"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_above="@+id/bus_bar"
    android:name="com.google.android.gms.maps.SupportMapFragment"/>

  <ImageButton
    android:id="@+id/btn_show_favourites"
    android:onClick="onClick"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_favourites_pressed"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_marginRight="56dp"
    android:layout_marginEnd="56dp"
    android:layout_marginTop="4dp"/>

  <TextView
    android:id="@+id/btn_timer"
    android:onClick="onClick"
    android:clickable="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_timer_pressed"
    android:layout_toLeftOf="@id/btn_show_favourites"
    android:layout_toStartOf="@id/btn_show_favourites"
    android:layout_marginTop="4dp"
    android:paddingTop="4dp"
    android:gravity="center"
    android:textColor="@color/white"
    android:textStyle="bold"
    />

  <LinearLayout
    android:id="@id/bus_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/black_overlay"
    android:padding="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:visibility="gone"
    >

    <LinearLayout
      android:id="@+id/btn_full_bus_schedule"
      android:onClick="onClick"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_weight=".85">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/tv_bus_capat1"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:textColor="@color/white"
          android:singleLine="true"
          android:text="@string/bus_bar_capat1_info_label"/>

        <LinearLayout
          android:id="@+id/ll_times_left"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingLeft="4dp"
          android:paddingStart="4dp"
          android:paddingRight="4dp"
          android:paddingEnd="4dp"
          android:orientation="horizontal"/>

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/tv_bus_capat2"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:textColor="@color/white"
          android:singleLine="true"
          android:text="@string/bus_bar_capat2_info_label"/>

        <LinearLayout
          android:id="@+id/ll_times_right"
          android:layout_width="match_parent"
          android:layout_height="16dp"
          android:paddingLeft="4dp"
          android:paddingStart="4dp"
          android:paddingRight="4dp"
          android:paddingEnd="4dp"
          android:orientation="horizontal"/>

      </LinearLayout>

    </LinearLayout>

    <TextView
      android:id="@+id/btn_select_bus"
      android:onClick="onClick"
      android:clickable="true"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight=".15"
      android:background="@drawable/ic_bus"
      android:paddingBottom="6dp"
      android:gravity="center"
      android:text="@string/bus_bar_add_btn_label"
      android:textColor="@color/white"/>
  </LinearLayout>

</RelativeLayout>
